Quick spacing fix to social logos

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5586,7 +5586,7 @@ html, body {
 /* line 64, ../dev/sass/_vpr.scss */
 .navbar .navbar-header .social_logos li {
   font-size: 32px;
-  padding-left: 8px;
+  padding-left: 4px;
 }
 
 /* line 72, ../dev/sass/_vpr.scss */
